# linear-motor-optimization

./: .gitattributes  .gitignore  README.md  bracket.step  halbach_array.step  main.py  pyproject.toml  workbench.py  workbench_monitor.py
.githooks/: pre-commit
docs/architecture/: 00-assessment.md  01-boundaries.md  02-conditions-refactor.md  03-solver-validation.md  04-roadmap.md  05-property-functions.md  06-typing-and-schema.md  07-run-lifecycle.md  08-optimization-seam.md  NEXT-SESSION-KICKOFF.md  README.md
docs/schema/: EntityTag.json  MaterialProperties.json  MeshingConfig.json
scripts/: check_truncation.py
src/: schemas.py  workbench.py  workbench_monitor.py
src/common/: protocols.py  utils.py  vector.py
src/elmer/: physics.py  sim.py
src/geometry/: config.py  halbach.py  magnet.py  mesh.py  pcb.py  utils.py
src/meshing/: config.py  generator.py  geometry_utils.py  mesh_entity.py
src/optimize/: constants.py
src/optimize/cad/: config.py  halbach.py  mesh.py  pcb.py  utils.py
src/physical/: conditions.py  pcb.py  property_functions.py  units.py
src/physical/materials/: air.py  neodymium.py  pcb.py  properties.py  registry.py
tests/: test_schemas.py
tests/elmer/: test_physics.py  test_sif_smoke.py  test_sif_validation.py
tests/meshing/: test_config.py  test_geometry_utils.py  test_tag_utils.py
tests/physical/: test_conditions.py  test_materials.py  test_property_functions.py  test_units.py
tests/vector/: test_box.py  test_coordinate_frame.py  test_quaternion.py  test_rect.py  test_vec2.py  test_vec3.py  test_vec3_ops.py  vec2.py
(+1 files in other folders)
